# LCR

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: com.linuxcustomresolution.LCR.desktop  com.linuxcustomresolution.LCR.metainfo.xml
flatpak/: com.linuxcustomresolution.LCR.yml
po/: ar.po  de.po  es.po  fr.po  hi.po  it.po  ja.po  ko.po  pt_BR.po  ru.po  zh_CN.po  zh_TW.po
scripts/: build-flatpak.sh  build-locale.sh  generate_po.py  sync-metainfo-version.py
src/lcr/: __init__.py  __main__.py  aspect.py  dialogs.py  i18n.py  main.py  theme.py
src/lcr/backend/: __init__.py  display.py  persistence.py
